--- a/Editor/Lua.Unity/Lua.Unity.Editor.asmdef
+++ b/Editor/Lua.Unity/Lua.Unity.Editor.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "Lua.Unity.Editor",
-    "rootNamespace": "",
+    "rootNamespace": "Lua.Unity.Editor",
     "references": [
         "GUID:a3eac051004cc4c6b92cb1b018e08311"
     ],
