update DLLs and include TimeProvider dlls

--- a/Editor/Lua.Unity/Lua.Unity.Editor.asmdef
+++ b/Editor/Lua.Unity/Lua.Unity.Editor.asmdef
@@ -11,7 +11,8 @@
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "Lua.dll"
+        "Lua.dll",
+        "Microsoft.Bcl.TimeProvider.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": [],
