--- a/Runtime/Lua.Unity/Lua.Unity.asmdef
+++ b/Runtime/Lua.Unity/Lua.Unity.asmdef
@@ -7,7 +7,8 @@
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "Lua.dll"
+        "Lua.dll",
+        "Microsoft.Bcl.TimeProvider.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": [],
